# turboquant-mlx

./: .gitmodules  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  __init__.py  compat.py  config.py  convert.py  convert_streaming.py  convert_vlm.py  generate.py  generate_vlm.py  model_card.md  model_card_gpt120b.md  model_card_nemotron120b.md  model_card_qwen.md  model_card_qwen235b.md  model_card_qwen235b_tq3.md  prefill_stats.py  pyproject.toml  quantize_model.py  sampling.py  serve.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_122b_kv_longctx.py  bench_122b_kv_longctx_results.json  bench_m5_pro.py  bench_m5_pro_results.json  demo_kv_v02.py  eval_kv_cache_ppl.py
core/: codebook.py  packing.py  polar_quantize.py
docs/design/: layer_streaming_poc.md
integration/: rotation_configs.py  vlm.py
kernels/: polar_dequant_experts.py  polar_gather_qmm.py  polar_gather_qmv.py  polar_multi_gather_qmv.py
layers/: ane_attention.py  polar_kv_cache.py  polar_switch_linear.py
scripts/: tq.py
stream/: __init__.py  ane_loader.py  batch_generate.py  calibrate_experts.py  fp8_scales_probe.py  loader.py  repack.py  repack_experts.py  repack_fp8_scales.py  repack_fused_gate_up.py  repack_interleaved.py  safetensors_reader.py  speculative_generate.py  stream_generate.py  streaming_switch.py
tests/: test_convert_streaming.py  test_core.py  test_k_reduction.py  test_kv_cache.py  test_polar_dequant_experts.py  test_polar_gather_qmm.py  test_prefill_keepalive.py  test_prefill_stats.py  test_serve_kv.py  test_serve_stream.py  test_stream_cache.py  test_think_guard.py  test_trit_packing.py  test_trust_os.py
