[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "mlx>=0.20.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "turboquant-mlx-full"
version = "0.12.0"
description = "Extreme weight and KV cache compression for LLMs on Apple Silicon (MLX implementation of Google's TurboQuant)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE-MIT", "NOTICE"]
authors = [{name = "Manjunath Janardhan", email = "manjunath.shiva@gmail.com"}]
keywords = [
    "mlx",
    "quantization",
    "llm",
    "kv-cache",
    "apple-silicon",
    "turboquant",
    "polarquant",
    "moe",
    "long-context",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.20.0",
    "mlx-lm>=0.31.3",
    "numpy",
]

[project.optional-dependencies]
eval = ["datasets", "transformers"]
dev = ["pytest", "build", "twine"]
vlm = ["mlx-vlm>=0.6.3"]

[project.urls]
Homepage = "https://github.com/manjunathshiva/turboquant-mlx"
Repository = "https://github.com/manjunathshiva/turboquant-mlx"
Issues = "https://github.com/manjunathshiva/turboquant-mlx/issues"

[project.scripts]
turboquant-convert = "turboquant_mlx.convert:main"
turboquant-generate = "turboquant_mlx.generate:main"
turboquant-serve = "turboquant_mlx.serve:main"

# package-dir trick: the git repo root IS the importable `turboquant_mlx`
# package, so we map the package name to the current directory and explicitly
# enumerate subpackages.
[tool.setuptools]
packages = [
    "turboquant_mlx",
    "turboquant_mlx.core",
    "turboquant_mlx.layers",
    "turboquant_mlx.kernels",
    "turboquant_mlx.integration",
    "turboquant_mlx.stream",
]
include-package-data = true

[tool.setuptools.package-dir]
"turboquant_mlx" = "."
"turboquant_mlx.core" = "core"
"turboquant_mlx.layers" = "layers"
"turboquant_mlx.kernels" = "kernels"
"turboquant_mlx.integration" = "integration"
